--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -72,7 +72,7 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - ~/postgres/data:/var/lib/postgresql/data
+      - pgdata:/var/lib/postgresql/data
 
   redis:
     image: redis:7-alpine
@@ -80,7 +80,7 @@ services:
     ports:
       - "6379:6379"
     volumes:
-      - ~/redis/data:/data
+      - redisdata:/data
     command: [ "redis-server", "--appendonly", "yes" ]
 
   keycloak:
@@ -112,7 +112,7 @@ services:
       MINIO_ROOT_USER: user
       MINIO_ROOT_PASSWORD: miniopass123
     volumes:
-      - ~/minio/data:/data
+      - miniodata:/data
     command: server /data --console-address ":9001"
 
   createbuckets:
@@ -121,3 +121,8 @@ services:
       - minio
     entrypoint: >
       /bin/sh -c " sleep 5; /usr/bin/mc alias set dockerminio http://minio:9000 user miniopass123; /usr/bin/mc mb dockerminio/files; exit 0; "
+
+volumes:
+  pgdata:
+  redisdata:
+  miniodata:
