--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -17,6 +17,8 @@ types-aiobotocore = { version = ">=2.21.1,<3.0.0", extras = ["s3"] }
 pyjwt = ">=2.10.1,<3.0.0"
 cryptography = ">=44.0.2,<45.0.0"
 psycopg2-binary = "^2.9.10"
+pytest = "^8.3.5"
+pytest-benchmark = "^5.1.0"
 
 
 [build-system]
@@ -26,6 +28,8 @@ build-backend = "poetry.core.masonry.api"
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.11.4"
 
+[tool.pytest.ini_options]
+pythonpath = ["."]
 
 [tool.pyright]
 venvPath = "."
